src/objects/Apttus_Config2__AdjustmentLineItem__c.object
<CustomObject>
    <description>Represents an adjustment to the price of a product/service</description>
    <fields>
        <fullName>APTS_AdjustmentLineItemExtId__c</fullName>
        <label>Adjustment Line Item External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_From_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used in category adjustment page to indicate that the adjustment was created as result of an A adjustment modified that became P</description>
        <label>Adjustment from Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Source__c</fullName>
        <description>Identify the discount coming from Account Hierarchy</description>
        <label>Adjustment Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                    <default>true</default>
                    <label>Child</label>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Buying-group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Type__c</fullName>
        <description>This is the Custom Adjustment Type Picklist</description>
        <label>Custom Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_UOM_translated__c</fullName>
        <label>Adjustment UOM translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_AgreementExtId__c</fullName>
        <label>Agreement External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement_Number__c</fullName>
        <description>This is Agreement number</description>
        <label>Agreement Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>Adjustment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Adjustment_Amount__c</fullName>
        <label>Asset Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Sub_Type__c</fullName>
        <label>Asset Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZP06</fullName>
                    <label>Permanent Discount</label>
                </value>
                <value>
                    <fullName>ZP07</fullName>
                    <label>Additional Permanent Discount</label>
                </value>
                <value>
                    <fullName>ZP04</fullName>
                    <label>Temporary Discount (Manual)</label>
                </value>
                <value>
                    <fullName>ZP08</fullName>
                    <label>Promotional Discount</label>
                </value>
                <value>
                    <fullName>ZP10</fullName>
                    <label>Promotional Discount (Coupons)</label>
                </value>
                <value>
                    <fullName>ZX10</fullName>
                    <label>Free Of Charge (100% Discount)</label>
                </value>
                <value>
                    <fullName>ZP15</fullName>
                    <label>Brand Marketing Campaign (Budget)</label>
                </value>
                <value>
                    <fullName>ZP11</fullName>
                    <label>Business Development Funds (YER)</label>
                </value>
                <value>
                    <fullName>ZP13</fullName>
                    <label>Business Development Funds (PPR)</label>
                </value>
                <value>
                    <fullName>ZP12</fullName>
                    <label>Efficiency Discount</label>
                </value>
                <value>
                    <fullName>YOCI</fullName>
                    <label>Consignment Ingredients</label>
                </value>
                <value>
                    <fullName>YOFT</fullName>
                    <label>Fixed term</label>
                </value>
                <value>
                    <fullName>ZP03</fullName>
                    <label>Discount Surcharge GSV</label>
                </value>
                <value>
                    <fullName>ZP02</fullName>
                    <label>Inflation correction</label>
                </value>
                <value>
                    <fullName>Z099</fullName>
                    <isActive>false</isActive>
                    <label>Z099</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Break_up_Adjustment_Price__c</fullName>
        <description>This is the Break-up Adjustment Price</description>
        <label>Break-up Adjustment Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_CER__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Entitlement Repository</label>
        <referenceTo>APTS_Contract_Entitlement_Repository__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>Adjustment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Name__c</fullName>
        <description>Holds category name to be displayed on adjustment pop-up window.</description>
        <formula>APTS_Category__r.Name</formula>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Product_Amendment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates if this adjustment was created in an amendment and coming from a category product</description>
        <label>Adjustment Category Product Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to determine the related category where the adjustment comes from, if created from category adjustments</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Adjustment Line Items (Category Hierarchy)</relationshipLabel>
        <relationshipName>APTS_ADLI_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Condition_Type__c</fullName>
        <description>This is the Condition Type Picklist</description>
        <label>Condition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>ZP06</fullName>
                </value>
                <value>
                    <fullName>ZP07</fullName>
                </value>
                <value>
                    <fullName>ZP04</fullName>
                </value>
                <value>
                    <fullName>ZP08</fullName>
                </value>
                <value>
                    <fullName>ZP09</fullName>
                </value>
                <value>
                    <fullName>ZP10</fullName>
                </value>
                <value>
                    <fullName>ZP11</fullName>
                </value>
                <value>
                    <fullName>ZX05</fullName>
                </value>
                <value>
                    <fullName>ZP12</fullName>
                </value>
                <value>
                    <fullName>ZP13</fullName>
                </value>
                <value>
                    <fullName>ZP14</fullName>
                </value>
                <value>
                    <fullName>ZP15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ConversionId__c</fullName>
        <label>Conversion Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Copied_Category_Adjustments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is used to indicate that the ADLI was created as result of the creation of a category based adjustment.</description>
        <label>Copied Category Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Custom_Adjustment_Amount__c</fullName>
        <description>This is the Custom Adjustment Amount</description>
        <label>Custom Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Guidance_Indicator__c</fullName>
        <formula>(ISPICKVAL(Apttus_Config2__SubType__c, &apos;ZX10&apos;)&amp;&amp;
 ISPICKVAL(APTS_Discount_Type__c, &apos;Manual&apos;)) 
||
(NOT(ISBLANK(TEXT(Apttus_Config2__SubType__c))) &amp;&amp;  
 NOT(ISPICKVAL(Apttus_Config2__SubType__c, &apos;YOCI&apos;)) &amp;&amp; 
 NOT(ISPICKVAL(Apttus_Config2__SubType__c, &apos;ZX10&apos;)) &amp;&amp; 
 NOT(ISPICKVAL(Apttus_Config2__SubType__c, &apos;YOFT&apos;)))</formula>
        <label>Deal Guidance Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_End_Date__c</fullName>
        <description>This is the End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Exclude_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Is Primary Checkbox</description>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LineItemExtId__c</fullName>
        <label>Line Item External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MigrationDate__c</fullName>
        <label>Migration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_months__c</fullName>
        <label>Warranty - Number of Months</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_SourceSystem__c</fullName>
        <label>Source System</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date__c</fullName>
        <description>This is the Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Category_Name__c</fullName>
        <formula>APTS_Sub_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>Adjustment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Sub_Category_Name__c</fullName>
        <formula>APTS_Sub_Sub_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Sub Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Sub Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Adjustment Line Items (Sub Sub Category)</relationshipLabel>
        <relationshipName>Adjustment_Line_Items_SubCategory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Temp_Id_String__c</fullName>
        <description>Temp key used in category based adjustments page</description>
        <label>Temp Id String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_UoM__c</fullName>
        <description>This is the UoM</description>
        <label>UoM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_LineItem_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is reference to agreement Line Item id</description>
        <label>Agreement Line Item</label>
        <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>Adjustment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2_SellingUom__c</fullName>
        <label>Selling Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_EA</fullName>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAppliesTo__c</fullName>
        <description>Indicates the price field the price adjustment should be applied to.</description>
        <label>Adjustment Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Starting Price</fullName>
                    <label>On Starting Price</label>
                </value>
                <value>
                    <fullName>Bucket 1</fullName>
                    <label>On Net List</label>
                </value>
                <value>
                    <fullName>Bucket 2</fullName>
                    <label>On Inflation</label>
                </value>
                <value>
                    <fullName>Bucket 3</fullName>
                    <label>On PPR</label>
                </value>
                <value>
                    <fullName>Bucket 4</fullName>
                    <label>On TPR</label>
                </value>
                <value>
                    <fullName>Bucket 5</fullName>
                    <label>On BMC/BDF/EFF</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                    <default>true</default>
                    <label>% Discount</label>
                </value>
                <value>
                    <fullName>Base Price Discount</fullName>
                    <label>Discount Amount PerUnit</label>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Override</fullName>
                </value>
                <value>
                    <fullName>Base Price Markup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentUom__c</fullName>
        <description>The adjustment unit of measure</description>
        <inlineHelpText>The adjustment unit of measure</inlineHelpText>
        <label>Adjustment Uom</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_BX</fullName>
                    <label>Box</label>
                </value>
                <value>
                    <fullName>SAP_PF</fullName>
                    <label>Pallet</label>
                </value>
                <value>
                    <fullName>SAP_GRM</fullName>
                    <label>Gram</label>
                </value>
                <value>
                    <fullName>SAP_KGM</fullName>
                    <label>Kilogram</label>
                </value>
                <value>
                    <fullName>SAP_LTR</fullName>
                    <label>Liter</label>
                </value>
                <value>
                    <fullName>SAP_PCE</fullName>
                    <default>true</default>
                    <label>Piece</label>
                </value>
                <value>
                    <fullName>SAP_LZ</fullName>
                    <label>LAY120*80</label>
                </value>
                <value>
                    <fullName>SAP_LY</fullName>
                    <label>LAY120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY1</fullName>
                    <label>HAP120*100</label>
                </value>
                <value>
                    <fullName>SAP_PY2</fullName>
                    <label>FUP120*100</label>
                </value>
                <value>
                    <fullName>SAP_ZQH</fullName>
                    <label>Quarter of Hour</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BenefitQuantity__c</fullName>
        <description>The incentive benefit quantity</description>
        <inlineHelpText>The incentive benefit quantity</inlineHelpText>
        <label>Benefit Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Bucket__c</fullName>
        <description>The bucket for grouping adjustments</description>
        <inlineHelpText>The bucket for grouping adjustments</inlineHelpText>
        <label>Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bucket 1</fullName>
                    <label>Discount GSV</label>
                </value>
                <value>
                    <fullName>Bucket 2</fullName>
                    <label>Inflation</label>
                </value>
                <value>
                    <fullName>Bucket 3</fullName>
                    <label>PPR</label>
                </value>
                <value>
                    <fullName>Bucket 4</fullName>
                    <label>TPR</label>
                </value>
                <value>
                    <fullName>Bucket 5</fullName>
                    <label>BMC/BDF/EFF</label>
                </value>
                <value>
                    <fullName>Bucket 6</fullName>
                    <label>YOCI/YOFT</label>
                </value>
                <value>
                    <fullName>Bucket 7</fullName>
                    <isActive>false</isActive>
                    <label>Bucket 7</label>
                </value>
                <value>
                    <fullName>Bucket 8</fullName>
                    <isActive>false</isActive>
                    <label>Bucket 8</label>
                </value>
                <value>
                    <fullName>Bucket 9</fullName>
                    <isActive>false</isActive>
                    <label>Bucket 9</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CouponCode__c</fullName>
        <description>The incentive coupon code</description>
        <inlineHelpText>The incentive coupon code</inlineHelpText>
        <label>Coupon Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveAdjustmentAmount__c</fullName>
        <description>The incentive benefit amount</description>
        <inlineHelpText>The incentive benefit amount</inlineHelpText>
        <label>Incentive Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>AdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsModifiable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the adjustment is modifiable</description>
        <label>Is Modifiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <description>ID of the associated line item</description>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Adjustments</relationshipLabel>
        <relationshipName>AdjustmentLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineNumber__c</fullName>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceMatrixEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the adjustment matrix entry</description>
        <inlineHelpText>ID of the adjustment matrix entry</inlineHelpText>
        <label>Price Matrix Entry</label>
        <referenceTo>Apttus_Config2__PriceMatrixEntry__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>AdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceMatrixId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the adjustment matrix</description>
        <inlineHelpText>ID of the adjustment matrix</inlineHelpText>
        <label>Price Matrix</label>
        <referenceTo>Apttus_Config2__PriceMatrix__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>AdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceRuleEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the adjustment rule entry</description>
        <inlineHelpText>ID of the adjustment rule Entry</inlineHelpText>
        <label>Price Rule Entry</label>
        <referenceTo>Apttus_Config2__PriceRuleEntry__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>AdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the adjustment rule</description>
        <inlineHelpText>ID of the adjustment rule</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>Apttus_Config2__PriceRule__c</referenceTo>
        <relationshipLabel>Adjustment Line Items</relationshipLabel>
        <relationshipName>AdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RunningTotalAdjustedPrice__c</fullName>
        <description>The adjusted price running total after applying the adjustment</description>
        <inlineHelpText>The adjusted price running total after applying the adjustment</inlineHelpText>
        <label>Running Total (Adjusted Price)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SubType__c</fullName>
        <description>The user defined sub type</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZP06</fullName>
                    <label>Permanent Discount</label>
                </value>
                <value>
                    <fullName>ZP07</fullName>
                    <label>Additional Permanent Discount</label>
                </value>
                <value>
                    <fullName>ZP04</fullName>
                    <label>Temporary Discount (Manual)</label>
                </value>
                <value>
                    <fullName>ZP08</fullName>
                    <label>Promotional Discount</label>
                </value>
                <value>
                    <fullName>ZP10</fullName>
                    <label>Promotional Discount (Coupons)</label>
                </value>
                <value>
                    <fullName>ZX10</fullName>
                    <label>Free Of Charge (100% Discount)</label>
                </value>
                <value>
                    <fullName>ZP15</fullName>
                    <label>Brand Marketing Campaign (Budget)</label>
                </value>
                <value>
                    <fullName>ZP11</fullName>
                    <label>Business Development Funds (YER)</label>
                </value>
                <value>
                    <fullName>ZP13</fullName>
                    <label>Business Development Funds (PPR)</label>
                </value>
                <value>
                    <fullName>ZP12</fullName>
                    <label>Efficiency Discount</label>
                </value>
                <value>
                    <fullName>YOCI</fullName>
                    <label>Consignment Ingredients</label>
                </value>
                <value>
                    <fullName>YOFT</fullName>
                    <label>Fixed term</label>
                </value>
                <value>
                    <fullName>ZP03</fullName>
                    <label>Discount Surcharge GSV</label>
                </value>
                <value>
                    <fullName>ZP02</fullName>
                    <label>Inflation correction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The user defined type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPR</fullName>
                    <default>true</default>
                    <label>Permanent Discount</label>
                </value>
                <value>
                    <fullName>TPR</fullName>
                    <label>Temporary Discount</label>
                </value>
                <value>
                    <fullName>YOCI</fullName>
                    <label>Consignment</label>
                </value>
                <value>
                    <fullName>YOFT</fullName>
                    <label>Fixed Term</label>
                </value>
                <value>
                    <fullName>GSV</fullName>
                    <label>Discount Surcharge GSV</label>
                </value>
                <value>
                    <fullName>BMC</fullName>
                    <label>Budget/Development/Efficiency</label>
                </value>
                <value>
                    <fullName>Inflation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UnitAdjustment__c</fullName>
        <description>The unit adjustment</description>
        <inlineHelpText>The unit adjustment</inlineHelpText>
        <label>Unit Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustom</label>
        <type>Checkbox</type>
    </fields>
    <label>Adjustment Line Item</label>
    <nameField>
        <displayFormat>AD-{0000000000}</displayFormat>
        <label>Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>